server and mongoDB set up

--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/rdotchin/mean-blog/issues"
   },
-  "homepage": "https://github.com/rdotchin/mean-blog#readme"
+  "homepage": "https://github.com/rdotchin/mean-blog#readme",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "method-override": "^2.3.8",
+    "mongoose": "^4.9.4",
+    "morgan": "^1.8.1"
+  }
 }
